--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "case-sensitive-paths-webpack-plugin": "1.1.3",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
-    "copy-webpack-plugin": "^3.0.1",
     "cross-spawn": "4.0.0",
     "css-loader": "0.24.0",
     "detect-port": "1.0.0",
@@ -65,7 +64,7 @@
   },
   "scripts": {
     "start-dev": "node scripts/start.js",
-    "start": "node scripts/build.js & node build/server-start",
+    "start": "node scripts/build.js & node server-start",
     "build": "node scripts/build.js",
     "test": "jest --watch --env=jsdom"
   },
