--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "scripts": {
     "start-dev": "node scripts/start.js",
-    "start": "node scripts/build.js & node server-start",
+    "start": "node scripts/build.js && node server-start",
     "build": "node scripts/build.js",
     "postinstall": "node scripts/build.js",
     "test": "jest --watch --env=jsdom"
