--- a/circle.yml
+++ b/circle.yml
@@ -23,4 +23,4 @@ deployment:
   develop:
     branch: develop
     commands:
-      #- sh ./deployment/build_release.sh
+      - sh ./scripts/push_to_staging.sh
