--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "build": "node scripts/build.js",
     "postinstall": "node scripts/build.js",
     "test-watch": "jest --watch --env=jsdom",
-    "test": "jest --env=jsdom"
+    "test": "CI=true jest --env=jsdom"
   },
   "eslintConfig": {
     "extends": "./config/eslint.js"
