--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-regenerator": "6.14.0",
     "babel-plugin-transform-runtime": "6.15.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-runtime": "6.11.6",
@@ -48,17 +49,22 @@
     "path-exists": "3.0.0",
     "postcss-loader": "0.11.1",
     "promise": "7.1.1",
+    "pushstate-server": "^2.0.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.6",
     "recursive-readdir": "2.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.15.1",
-    "whatwg-fetch": "1.0.0",
-    "pushstate-server": "^2.0.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "whatwg-fetch": "1.0.0"
   },
   "scripts": {
     "start-dev": "node scripts/start.js",
@@ -90,5 +96,8 @@
     ],
     "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx)$"
+  },
+  "devDependencies": {
+    "redux-immutable-state-invariant": "^1.2.4"
   }
 }
