--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-redux": "^4.0.6",
     "recursive-readdir": "2.0.0",
     "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^1.2.4",
     "redux-thunk": "^2.1.0",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
@@ -97,7 +98,5 @@
     "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx)$"
   },
-  "devDependencies": {
-    "redux-immutable-state-invariant": "^1.2.4"
-  }
+  "devDependencies": {}
 }
