--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "scripts": {
     "start-dev": "node scripts/start.js",
-    "start": "node scripts/build.js && node server-start",
+    "start": "node server-start",
     "build": "node scripts/build.js",
     "postinstall": "node scripts/build.js",
     "test-watch": "jest --watch --env=jsdom",
