--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "pushstate-server": "^2.0.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-graph-vis": "^0.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
