--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "http-proxy-middleware": "0.17.1",
     "jest": "15.1.1",
     "json-loader": "0.5.4",
+    "lodash": "^4.17.4",
     "moment": "^2.16.0",
     "object-assign": "4.1.0",
     "opn": "4.0.2",
@@ -59,8 +60,10 @@
     "react-router-redux": "^4.0.6",
     "recursive-readdir": "2.0.0",
     "redux": "^3.6.0",
+    "redux-api-middleware": "^1.0.3",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-thunk": "^2.1.0",
+    "reselect": "^3.0.1",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
@@ -77,9 +80,9 @@
     "test-watch": "jest --watch --env=jsdom",
     "test": "CI=true jest --env=jsdom"
   },
-  "engines": {                                                                                                
-    "node": "^6.11.1"                                                                                         
-  },   
+  "engines": {
+    "node": "^6.11.1"
+  },
   "eslintConfig": {
     "extends": "./config/eslint.js"
   },
