--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "path-exists": "3.0.0",
     "postcss-loader": "0.11.1",
     "promise": "7.1.1",
+    "prop-types": "^15.5.10",
     "pushstate-server": "^2.0.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
