--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-scripts": "1.0.11"
   },
   "scripts": {
-    "postinstall": "react-scripts build",
+    "postinstall": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
