--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^15.6.1",
     "react-graph-vis": "^0.1.3",
     "react-redux": "^5.0.6",
+    "react-responsive": "^1.3.4",
     "react-router-dom": "^4.1.2",
     "react-view-pager": "^0.5.1",
     "redux": "^3.7.2",
