--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "name": "ft-six-degrees-fe-app",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "description": "FT Six Degrees FE App",
-  "author": "Tomasz Libich",
+  "author": "Tomasz Libich & Dragos Digulescu",
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/six-degrees-app.git"
   },
   "engines": {
-    "node": "^6.11.1"
+    "node": "^8.5.0"
   },
   "dependencies": {
     "lodash": "^4.17.4",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-graph-vis": "^0.1.3",
+    "react-graph-vis": "^1.0.2",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
     "react-router-dom": "^4.1.2",
     "react-view-pager": "^0.5.1",
     "redux": "^3.7.2",
-    "redux-api-middleware": "^2.0.0-beta.3",
+    "redux-api-middleware": "^2.0.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
     "prettier": "^1.5.3",
-    "prop-types": "^15.5.10",
-    "react-scripts": "1.0.11"
+    "prop-types": "^15.6.0",
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
