--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-graph-vis": "^1.0.2",
+    "react-graph-vis": "ddigulescu/react-graph-vis",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
     "react-router-dom": "^4.1.2",
