--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: npm install
+          command: npm install
+      - run:
           name: npm tests
           command: npm test
 workflows:
